--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
